--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "wingo-api",
   "version": "1.0.0",
-  "description": "Wingo prediction API",
+  "description": "Wingo prediction scraper API",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "axios": "^1.6.0",
-    "cors": "^2.8.5",
+    "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.2"
   }
 }
