--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wingo-api",
   "version": "1.0.0",
-  "description": "Wingo prediction proxy API",
+  "description": "Wingo mirror API",
   "main": "server.js",
   "type": "commonjs",
   "scripts": {
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "cheerio": "^1.0.0-rc.12"
   }
 }
