--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "wingo-api",
+  "name": "wingo-auto-engine",
   "version": "1.0.0",
-  "description": "Wingo mirror API",
   "main": "server.js",
   "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.6.7",
-    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "cheerio": "^1.0.0-rc.12"
+    "cors": "^2.8.5"
   }
 }
