--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "wingo-auto-engine",
+  "name": "wingo-api",
   "version": "1.0.0",
   "main": "server.js",
-  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "axios": "^1.6.0",
+    "express": "^4.18.2"
   }
 }
