--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "wingo-api",
+  "name": "wingo-bot",
   "version": "1.0.0",
+  "description": "Big Small prediction bot",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "express": "^4.18.2"
+    "node-telegram-bot-api": "^0.64.0"
   }
 }
