--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "wingo-bot",
+  "name": "wingo-ai",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "node-telegram-bot-api": "^0.64.0"
+    "express": "^4.18.2"
   }
 }
