--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "wingo-ai",
+  "name": "wingo-bot",
   "version": "1.0.0",
+  "description": "Wingo prediction bot",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-telegram-bot-api": "^0.66.0"
   }
 }
